<resources>
    <string name="app_name">Proy5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="btnActualizar">Actualizar</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="btnComprar">Comprar</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="producto_a_comprar">Producto a comprar</string>
    <string name="descripcion_de_producto_a_comprar">Descripcion de producto a comprar</string>
    <string name="precio">Precio</string>
    <string name="cantidad">Cantidad</string>
    <string name="total">Total</string>
    <string name="sub_total">Sub Total:</string>
    <string name="_1500">1500</string>
    <string name="i_g_v">I.G.V.:</string>
    <string name="_180">180</string>
    <string name="totalCart">Total:</string>
    <string name="lista_vacia">Aún no tienes productos en tu carrito de compras, ve a Home para añadir productos.</string>
    <string name="n_pedido">N° Pedido:</string>
    <string name="_432343">#432343</string>
    <string name="fecha">Fecha:</string>
    <string name="_12_12_12">12/12/12</string>
    <string name="hora">Hora:</string>
    <string name="_12_12_12_hora">12:12:12</string>
    <string name="subtotal">SubTotal:</string>
    <string name="s_0_000_00">S/ 0,000.00</string>
    <string name="i_g_v_pedido">I.G.V:</string>
    <string name="total_pedido">Total:</string>
    <string name="producto">Producto</string>
    <string name="agregar_al_carrito">Agregar al carrito</string>
    <string name="buscar_producto">Buscar producto</string>
    <string name="pc_s_category">PC\'s</string>
    <string name="procesadores_category">Procesadores</string>
    <string name="monitores_category">Monitores</string>
    <string name="perif_ricos_category">Periféricos</string>
    <string name="mouse_gamer">Mouse Gamer</string>
    <string name="producto_dos_puntos">Producto:</string>
    <string name="precio_unitario_dos_puntos">Precio unitario:</string>
    <string name="cantidad_dos_puntos">Cantidad:</string>
    <string name="_10">10</string>
    <string name="precio_total_dos_puntos">Precio total:</string>
    <string name="producto_sin_puntos">Producto</string>

</resources>