<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewCodigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_432343"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewCodigo"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:text="@string/_12_12_12"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewDate"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:layout_toStartOf="@+id/textViewDate"
        android:text="@string/mouse_gamer"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textViewItemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewItemName"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:text="@string/s_0_000_00"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/textViewItemPrice"
        android:background="@android:color/darker_gray" />

</RelativeLayout>