<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.DetailProductFragment">

    <ImageView
        android:id="@+id/imageViewProducto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_producto"
        android:outlineProvider="background"
        android:clipToOutline="true"
        android:padding="32dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"/>

    <TextView
        android:id="@+id/textViewProductoTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/producto"
        android:textSize="24sp"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/imageViewProducto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"/>

    <TextView
        android:id="@+id/textViewProductoPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/s_0_000_00"
        android:layout_marginTop="8dp"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/textViewProductoTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"/>

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cantidad"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/textViewProductoPrecio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"/>

    <NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/textViewDescription"
        app:layout_constraintBottom_toTopOf="@id/buttonAgregarAlCarrito"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonAgregarAlCarrito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar_al_carrito"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>